--- a/webroot/css/estilos.css
+++ b/webroot/css/estilos.css
@@ -11,23 +11,30 @@ body{
     text-align: center;
     display:flex;
     flex-flow:column;
+    height: 100vh;
 }
 header{
     background-color:#0A001A;
     width:100vw;
     height: 10vh;
-    border-bottom:solid aqua 1px;
+    border-bottom:solid #2F95FA 1px;
     display:flex;
     justify-content: center;
     align-items: center;
+    flex-flow: column;
 }
-h2{
-    font-size:18px;
-    color:blue;
-}
+
 main{
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 80vh;
+    flex-flow: column;
+    gap: 20px;
+}
+h2{
+    font-size:18px;
+    color:#2F95FA;
 }
 input, label{
     margin:5px;
@@ -43,6 +50,16 @@ input{
 }
 footer{
     text-align: left;
+    border-top: solid white 1px;
+    font-family: serif;
+    font-size: 14px;
+    height: 10vh;
+    padding-left:20px;
+    display: flex;
+    flex-flow: column;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    gap:5px;
 }
 .giturl{
     height:10px;
