--- a/webroot/css/estilos.css
+++ b/webroot/css/estilos.css
@@ -36,6 +36,9 @@ h2{
     font-size:18px;
     color:#2F95FA;
 }
+form, form table{
+    height:15vh;
+}
 input, label{
     margin:5px;
 }
@@ -47,6 +50,14 @@ input{
     padding:5px;
     background-color: grey;
     color:white;
+    margin:5px;                                                                                                  
+}
+.boton:hover{
+    cursor: pointer;
+}
+.wip{
+    font-size:80px;
+    font-weight:bold;
 }
 footer{
     text-align: left;
