--- a/webroot/css/estilos.css
+++ b/webroot/css/estilos.css
@@ -12,6 +12,7 @@ body{
     display:flex;
     flex-flow:column;
     height: 100vh;
+    width:100vw;
 }
 header{
     background-color:#0A001A;
@@ -44,6 +45,16 @@ input, label{
 }
 input{
     background-color:black;
+    padding: 5px;
+}
+input[readonly]{
+    background-color:grey;
+}
+input[readonly]:hover{
+    cursor:initial;
+}
+span{
+    color: #A7083C;
 }
 .boton{
     border:solid blueviolet 2px;
@@ -90,17 +101,13 @@ footer{
     height:auto;
     color:black;
 }
-.e{
-    coloer:black;
+.detalle{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    gap: 15px;
 }
-#zPHP { background-color: darkGray; }
-
-#presentation{
-    width:500px;
-    height: 140px;
-    text-align: center;
-    color: lightGray;
-    margin: auto;
-    margin-top: -20px;
-    padding-top: 40px;
+.e, .v{
+    background-color:black;
+    color: white;
 }
